feat(server): support API key to protect routes
Closes #25
